--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "flexboxgrid": "^6.3.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -24,6 +25,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
+    "sass": "^1.64.1",
     "vite": "^4.4.6",
     "vitest": "^0.33.0"
   }
